# aubo_demo

./: readme.md
aubo_cpp_demo/: CMakeLists.txt  readme.md
aubo_cpp_demo/dependents/robotSDK/inc/: AuboRobotMetaType.h  serviceinterface.h
aubo_cpp_demo/include/: example_0.h
aubo_cpp_demo/src/: example_0.cpp  main.cpp
aubo_ros_demo/src/aubo_controller/: CMakeLists.txt
aubo_ros_demo/src/aubo_controller/src/: joint_trajectory_action.cpp
aubo_ros_demo/src/aubo_demo/: CMakeLists.txt
aubo_ros_demo/src/aubo_demo/src/: MoveGroupInterface_To_Melodic.cpp
aubo_ros_demo/src/aubo_description/: CMakeLists.txt
aubo_ros_demo/src/aubo_driver/: CMakeLists.txt
aubo_ros_demo/src/aubo_kinematics/: CMakeLists.txt
aubo_ros_demo/src/aubo_meta/aubo_demo/: README.md
aubo_ros_demo/src/aubo_meta/aubo_kinematics/: CMakeLists.txt
aubo_ros_demo/src/aubo_meta/aubo_planner/: CMakeLists.txt
aubo_ros_demo/src/aubo_planner/: CMakeLists.txt
aubo_ros_demo/src/aubo_robot/: CMakeLists.txt
aubo_ros_meta/src/aubo_meta/aubo_demo/: CMakeLists.txt
aubo_ros_meta/src/aubo_meta/aubo_demo/src/: MoveGroupInterface_To_Melodic.cpp  aubo_i5_demo.cpp
aubo_ros_meta/src/aubo_meta/aubo_description/scene/: aubo_i5_demo.scene
aubo_ros_meta/src/aubo_meta/aubo_description/urdf/: aubo_i5.urdf  aubo_i5.urdf.xacro
aubo_ros_meta/src/aubo_meta/aubo_i5_moveit_config/: .setup_assistant
aubo_ros_meta/src/easy_handeye/results/: aubo_i5_d405_handeyecalibration_eye_on_base.yaml  aubo_i5_d435_handeyecalibration_eye_on_base.yaml  aubo_i5_d435_handeyecalibration_eye_on_hand.yaml
(+13 files in other folders)
